# Module_28_threads_task_3

./: CMakeLists.txt
include/: random_int_generator.h
src/: main.cpp  random_int_generator.cpp
